Refactor openapi.yaml
